<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var8</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigate_activity">Navigate to secondary activity</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="center">Center</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="title_activity_practical_test01_var8_secondary">PracticalTest01Var8SecondaryActivity</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>

</resources>
